# pocketwalker

./: .gitignore  README.md
.github/workflows/: build-release.yml  build-windows.yml  build.yml
core/cpu/: cpu.cpp  cpu.h  registers.h
core/cpu/instructions/: instruction.h  set.cpp  set.h  table.cpp  table.h
core/memory/: interface.cpp  interface.h  memory.h
core/pokewalker/: pocketwalker.cpp  pocketwalker.h
core/pokewalker/peripherals/bma150/: bma150.cpp  bma150.h
core/pokewalker/peripherals/buzzer/: buzzer.cpp  buzzer.h
core/pokewalker/peripherals/m95512/: m95512.cpp  m95512.h
core/pokewalker/peripherals/ssd1854/: ssd1854.cpp  ssd1854.h
core/soc/: defines.h  h838606.cpp  h838606.h
core/soc/interrupts/: interrupts.cpp  interrupts.h
core/soc/memory/: bus.cpp  bus.h
core/soc/memory/regions/: io.cpp  io.h  ram.cpp  ram.h  rom.cpp  rom.h
core/soc/rtc/: rtc.cpp  rtc.h
core/soc/ssu/: defines.h  peripheral.h  ssu.cpp  ssu.h
core/soc/timer/: timerb1.cpp  timerb1.h  timerw.cpp  timerw.h
core/utils/: event_handler.h  logger.h
desktop/: CMakeLists.txt  vcpkg.json
desktop/assets/: resources.qrc
desktop/assets/shaders/: framebuffer.frag  framebuffer.vert
desktop/src/: main.cpp
desktop/src/qt/: application_args.h  main_window.cpp  main_window.h
desktop/src/qt/api/: qt_api.cpp  qt_api.h
desktop/src/qt/audio/: qt_audio_system.cpp  qt_audio_system.h
desktop/src/qt/dialog/settings/: audio_settings_dialog.cpp  audio_settings_dialog.h  control_settings_dialog.cpp  control_settings_dialog.h  general_settings_dialog.cpp  general_settings_dialog.h
desktop/src/qt/emulator/: emulator_context.cpp  emulator_context.h
desktop/src/qt/settings/: app_settings.cpp  app_settings.h
desktop/src/qt/settings/types/: audio_settings.h  control_settings.h  general_settings.h  ir_settings.h
desktop/src/qt/widget/: display_widget.cpp  display_widget.h  key_bind_button.cpp  key_bind_button.h
desktop/src/qt/widgets/: display_widget.cpp
desktop/src/qt/window/: qt_window_system.cpp  qt_window_system.h
desktop/src/qt/window/widgets/: display_widget.cpp  display_widget.h
